--- a/style.css
+++ b/style.css
@@ -1,35 +1,91 @@
-#board {
-  display:grid;
-  grid-template-columns: repeat(10, max-content);
-  grid-auto-rows: 1fr;
-  gap: 2px;
+body {
+  --background: hsl(0, 0%, 100%);
+  --foreground: hsl(0, 0%, 0%);
+
+  --midColor: hsl(0, 0%, 50%);
+  --hoverColor: hsl(240, 100%, 25%);
+
+  --inputBGColor: hsl(0, 0%, 88%);
+
+  --columns: 10;
+
+  --color-1: blue;
+  --color1: black;
+  --color2: red;
+  --color3: green;
 }
 
+body.nightMode {
+  --background: hsl(260, 9%, 10%);
+  --foreground: hsl(260, 4%, 74%);
+
+  --midColor: hsl(260, 4%, 30%);
+  --hoverColor: hsl(240, 50%, 50%);
+
+  --inputBGColor: hsl(260, 9%, 15%);
+
+  --color1: grey;
+  --color3: lightgreen;
+}
+
+body {
+  background-color: var(--background);
+  color: var(--foreground);
+}
+
+#board {
+  display:grid;
+  grid-template-columns: repeat(var(--columns), 1fr);
+  grid-auto-rows: 1fr;
+  width: fit-content;
+  border: 1px solid var(--midColor);
+  resize: both;
+  overflow: auto;
+  gap: 2px;
+  padding: 2px;
+}
+
+
 #board > div {
-  border: 1px solid black;
+  border: 1px solid var(--midColor);
   padding: 2px;
   user-select: none;
   text-align: center;
+  justify-content: middle;
+  display:flex;
+  flex-direction: column;
+  margin: 1px;
+}
+
+#board > div:hover { 
+  border: 2px solid var(--hoverColor);
+  margin: 0;
 }
 
 #board > div > * {
-  background-color: white;
+  background-color: var(--background);
   pointer-events: none;
+  margin: auto;
 }
 
 
 *[data-count="-1"]{
-  background-color: blue;
+  background-color: var(--color-1);
 }
 
 *[data-count="1"]{
-  background-color: black;
+  background-color: var(--color1);
 }
 
 *[data-count="2"]{
-  background-color: red;
+  background-color: var(--color2);
 }
 
 *[data-count="3"]{
-  background-color: orange;
+  background-color: var(--color3);
+}
+
+input {
+  color: var(--foreground);
+  background-color: var(--buttonBGColor);
 }
