--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 
-#board > div {
+.item {
   border: 1px solid var(--midColor);
   padding: 2px;
   user-select: none;
@@ -56,27 +56,30 @@ body {
   margin: 1px;
 }
 
-#board > div:hover { 
+.item:hover { 
   border: 2px solid var(--hoverColor);
   margin: 0;
 }
 
-#board > div > * {
+.item > div {
   background-color: var(--background);
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-size: cover; 
+  width: 32px; 
+  height: 32px;
   font-size: 1.2em;
-  font-weight: bold;
-  -webkit-text-stroke: 1.8px black;
-  -webkit-text-fill-color: white;
   pointer-events: none;
   margin: auto;
-  text-align: center;
-  justify-content: center;
+  text-align: right;
+  align-items: end;
+  justify-content: end;
   display:flex;
   flex-direction: column;
   border: 1px solid black;
 }
 
+.item > div > span {
+  background-color: rgba(0, 0, 0, 0.9);
+}
 
 *[data-count="-1"]{
   background-color: var(--color-1);
